Second pass of documentation

--- a/src/less/manual.less
+++ b/src/less/manual.less
@@ -68,15 +68,13 @@ header, nav, aside#sidebar, main, footer, content {
 
 h1 {
   color : #000;
-  font-size : 2em;
+  font-size : 2.5em;
 }
 
 h2 {
-  background-color : #fafafa;
-  border : 1px solid #e8e8e8;
-  padding : .5em;
+  color : #000;
   font-size : 1.5em;
-  font-weight : normal;
+  margin-top : 2em;
 }
 
 h3 {
@@ -138,11 +136,8 @@ table.reference {
  */
 header {
   text-align : right;
+  background-color : rgba(87, 42, 121, 1);
 }
-  header:before {
-    &:extend(.before);
-    background : url('/images/header.png') no-repeat 50% 50%;
-  }
   header > nav {
     padding : 20px;
   }
