--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -138,18 +138,16 @@
     </main>
 
     <script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  if ( window.location.hostname === 'os.js.org' ) {
-    ga('create', 'UA-46087265-1', 'auto');
-  } else {
-    ga('create', 'UA-90971004-3', 'auto');
-  }
+  ga('create', 'UA-90971004-4', 'auto');
   ga('send', 'pageview');
 
+</script>
     </script>
 
     <script>
