--- a/src/less/manual.less
+++ b/src/less/manual.less
@@ -1,6 +1,3 @@
-@sidebar-width: 300px;
-@sidebar-alternative-width : 360px;
-@header-height: 84px;
 
 html, body {
   margin : 0;
@@ -8,10 +5,6 @@ html, body {
   height : 100%;
   min-height : 100%;
   height : auto;
-}
-
-.container {
-  padding : 40px;
 }
 
 .after,
@@ -69,11 +62,13 @@ header, nav, aside#sidebar, main, footer, content {
 h1 {
   color : #000;
   font-size : 2.5em;
+  margin-top : 0;
+  padding-top : 0;
 }
 
 h2 {
-  color : #000;
   font-size : 1.5em;
+  padding-bottom: .5em;
   margin-top : 2em;
 }
 
@@ -135,80 +130,12 @@ table.reference {
  * Header
  */
 header {
-  text-align : right;
-  background-color : rgba(87, 42, 121, 1);
+  font-size : 2em;
+  font-weight : bold;
+  color : #fff;
+  background-color : #572a79;
+  padding : 1em;
 }
-  header > nav {
-    padding : 20px;
-  }
-    header > nav > a {
-      display : inline-block;
-      vertical-align : middle;
-      color : #fff;
-      position : relative;
-      padding : 10px;
-      padding-left : 20px;
-      padding-right : 20px;
-      margin-left : .9em;
-    }
-      header > nav > a:before {
-        &:extend(.before);
-        background-color : #fff;
-        opacity : .2;
-        border-radius : 2px;
-      }
-      header > nav > a:hover:before {
-        opacity : .4;
-      }
-
-    header > nav > form {
-      display : inline-block;
-      vertical-align : middle;
-      position : relative;
-      margin-left : .9em;
-      margin-right : 2em;
-      width : 16em;
-    }
-
-    header > nav > form > input {
-      outline : none;
-      margin : 0;
-      padding : 0;
-      height : 100%;
-      width : 100%;
-      padding : 10px;
-      padding-left : 20px;
-      padding-right : 20px;
-      box-sizing : border-box;
-      border : 0 none;
-      background-color : #fff;
-      border-radius : 2px;
-      font-size : inherit;
-    }
-
-    header > nav > a.active {
-      font-weight : bold;
-    }
-      header > nav > a.active:before {
-        opacity : .4;
-      }
-
-#Logo {
-  position : absolute;
-  width : @sidebar-width;
-  left : 0;
-  top : 0;
-  bottom : 0;
-  background : url('/images/logo.png') no-repeat 50% 50%;
-  background-size : auto 80%;
-}
-  #Logo:before {
-    &:extend(.before);
-    background-color : #fafafa;
-    border-right : 1px solid #e8e8e8;
-    box-sizing : border-box;
-    opacity : .1;
-  }
 
 /**
  * Wrapper
@@ -222,16 +149,16 @@ main {
  * Sidebar
  */
 aside#sidebar {
-  flex: 0 0 @sidebar-width;
-  width : @sidebar-width;
+  flex: 0 0 auto;
+  margin-right : 2em;
+  padding : 2em;
   background-color : #fafafa;
-  border-right : 1px solid #e8e8e8;
-  &:extend(.container);
 }
   aside#sidebar > nav {
   }
     aside#sidebar > nav a {
       text-decoration : none;
+      color : #000;
       display : inline-block;
     }
 
@@ -240,54 +167,34 @@ aside#sidebar {
       padding-left : 1em;
     }
       aside#sidebar > nav > ol > li {
-        padding-bottom : .4em;
+        padding-bottom : 1em;
       }
-      aside#sidebar > nav > ol ul > li {
-        padding-bottom : .4em;
-      }
+        aside#sidebar > nav > ol > li li {
+          margin-bottom : .5em;
+        }
+        aside#sidebar > nav > ol > li > a,
+        aside#sidebar > nav > ol > li > span {
+          font-weight : bold;
+        }
       aside#sidebar > nav > ol ul {
         &:extend(.list);
-        padding-top : .4em;
+        padding-top : 1em;
       }
 /**
  * Content
  */
 content {
-  &:extend(.container);
   flex : 1 1 auto;
   min-height : 100%;
-  padding-bottom : 100px;
+  padding : 2em;
+  padding-bottom : 10em;
 }
 
 /**
  * Footer
  */
 footer {
-  &:extend(.container);
   text-align : center;
   font-size : 70%;
 }
 
-/**
- * Documentation pages
- */
-body#documentation {
-  #Logo {
-    width : @sidebar-alternative-width;
-  }
-  aside#sidebar {
-    flex: 0 0 @sidebar-alternative-width;
-    width : @sidebar-alternative-width;
-  }
-}
-
-.manual_build_grunt table td:nth-child(1) {
-  width : 200px;
-}
-
-.manual_build_cli table td:nth-child(1) {
-  width : 200px;
-}
-.manual_build_cli table td:nth-child(2) {
-  width : 500px;
-}
