--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -18,20 +18,11 @@
     <link rel="apple-touch-icon-precomposed" href="/favicon.png" />
     <link rel="author" href="https://plus.google.com/101576798387217383063" />
     <link rel="publisher" href="https://plus.google.com/101576798387217383063" />
-    <link rel="canonical" href="https://www.os-js.org/{{ this.path }}" />
+    <link rel="canonical" href="https://manual.os-js.org/{{ this.path }}" />
   </head>
   <body class="{{pathClass this.path}}">
     <header>
-      <div id="Logo"></div>
-      <nav>
-        <form method="get" action="https://www.google.com/search" id="Search">
-          <input type="text" name="q" id="SearchQuery" placeholder="Search with Google" />
-        </form>
-
-        <a href="/">Home</a>
-        <a href="/manual" {{#startsWith "manual" this.path}}class="active"{{/startsWith}}>Manual</a>
-        <a href="/doc" {{#startsWith "doc" this.path}}class="active"{{/startsWith}}>Documentation</a>
-      </nav>
+      OS.js v2.1 Manual
     </header>
 
     <main>
@@ -114,27 +105,27 @@
 
       <content>
         {{{ contents }}}
-
-        <footer>
-          <div class="adddshere">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- https://os.js.org (RESPONSIVE) -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-6145716264521226"
-                 data-ad-slot="9888011596"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-          </div>
-
-          <p>OS.js &copy; Anders Evenrud 2011-2017</p>
-          <p>Hosting by Github</p>
-          <p>Generated with Metalsmith</p>
-        </footer>
       </content>
     </main>
+
+    <footer>
+      <div class="adddshere">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- https://os.js.org (RESPONSIVE) -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-6145716264521226"
+             data-ad-slot="9888011596"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+
+      <p>OS.js &copy; Anders Evenrud 2011-2017</p>
+      <p>Hosting by Github</p>
+      <p>Generated with Metalsmith</p>
+    </footer>
 
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
