Added misc module manual

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -81,6 +81,7 @@
                 <li><a href="/modules/service">Service</a></li>
                 <li><a href="/modules/transport">Transport</a></li>
                 <li><a href="/modules/themes">Themes</a></li>
+                <li><a href="/modules/misc">Misc</a></li>
               </ul>
             </li>
 
