Now using a 'Guide' section instead of 'Modules'

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -68,20 +68,9 @@
               <ul>
                 <li><a href="/configuration/">General</a></li>
                 <li><a href="/configuration/#webpack">Webpack</a></li>
-              </ul>
-            </li>
-
-            <li>
-              <span>Modules</span>
-              <ul>
-                <li><a href="/modules/connection">Connection</a></li>
-                <li><a href="/modules/authenticator">Authenticator</a></li>
-                <li><a href="/modules/storage">Storage</a></li>
-                <li><a href="/modules/middleware">Middleware</a></li>
-                <li><a href="/modules/service">Service</a></li>
-                <li><a href="/modules/transport">Transport</a></li>
-                <li><a href="/modules/themes">Themes</a></li>
-                <li><a href="/modules/misc">Misc</a></li>
+                <li><a href="/configuration/connection">Connection</a></li>
+                <li><a href="/configuration/authenticator">Authenticator</a></li>
+                <li><a href="/configuration/storage">Storage</a></li>
               </ul>
             </li>
 
@@ -93,6 +82,19 @@
                 <li><a href="/packages/vue">Using Vue</a></li>
                 <li><a href="/packages/react">Using React</a></li>
                 <li><a href="/packages/iframe">Using IFrame</a></li>
+              </ul>
+            </li>
+
+            <li>
+              <span>Guides</span>
+              <ul>
+                <li><a href="/guides/authenticator">Authenticator</a></li>
+                <li><a href="/guides/storage">Storage</a></li>
+                <li><a href="/guides/middleware">Middleware</a></li>
+                <li><a href="/guides/service">Service</a></li>
+                <li><a href="/guides/transport">Transport</a></li>
+                <li><a href="/guides/themes">Themes</a></li>
+                <li><a href="/guides/misc">Misc</a></li>
               </ul>
             </li>
 
