Added responsive guide

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -94,6 +94,7 @@
                 <li><a href="/guides/service">Service</a></li>
                 <li><a href="/guides/transport">Transport</a></li>
                 <li><a href="/guides/themes">Themes</a></li>
+                <li><a href="/guides/responsive">Responsiveness</a></li>
                 <li><a href="/guides/misc">Misc</a></li>
               </ul>
             </li>
