--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -30,15 +30,12 @@
         <nav>
           <ol>
             <li>
-              <a href="/">Introduction</a>
-            </li>
-
-            <li>
-              <a href="/community">Community</a>
-            </li>
-
-            <li>
-              <a href="/installation">Installation</a>
+              <span>Introduction</span>
+              <ul>
+                <li><a href="/">About</a></li>
+                <li><a href="/community">Community</a></li>
+                <li><a href="/installation">Installation</a></li>
+              </ul>
             </li>
 
             <li>
