Added vfs configuration section

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -68,6 +68,7 @@
                 <li><a href="/configuration/connection">Connection</a></li>
                 <li><a href="/configuration/authenticator">Authenticator</a></li>
                 <li><a href="/configuration/storage">Storage</a></li>
+                <li><a href="/configuration/vfs">VFS</a></li>
               </ul>
             </li>
 
