--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -87,9 +87,9 @@
               <ul>
                 <li><a href="/guides/authenticator">Authenticator</a></li>
                 <li><a href="/guides/storage">Storage</a></li>
+                <li><a href="/guides/transport">VFS Transport</a></li>
                 <li><a href="/guides/middleware">Middleware</a></li>
                 <li><a href="/guides/service">Service</a></li>
-                <li><a href="/guides/transport">Transport</a></li>
                 <li><a href="/guides/themes">Themes</a></li>
                 <li><a href="/guides/responsive">Responsiveness</a></li>
                 <li><a href="/guides/misc">Misc</a></li>
