--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -34,6 +34,7 @@
                 <li><a href="/">About</a></li>
                 <li><a href="/community">Community</a></li>
                 <li><a href="/installation">Installation</a></li>
+                <li><a href="/faq">FAQ</a></li>
               </ul>
             </li>
 
