--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>{{ title }} - OS.js v2.1 Manual</title>
+    <title>{{ title }} - OS.js Manual</title>
     <meta name="description" content="OS.js Manual - {{ description }}" />
     <meta name="keywords" content="OS.js,Documentation,Client,Server,API,Tutorial,Tutorials,Manual,Manuals" />
 
@@ -21,7 +21,7 @@
   </head>
   <body class="{{pathClass this.path}}">
     <header>
-      OS.js v2.1 Manual
+      OS.js Manual
     </header>
 
     <main>
