--- a/src/_layouts/website/page.html
+++ b/src/_layouts/website/page.html
@@ -3,7 +3,7 @@
 {% block book_body %}
   {{ super() }}
 
-  <div class="adddshere">
+  <div class="adddshere" style="position:absolute;bottom:1em;left:1em;width:100%;">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-6145716264521226"
