Moved v2 manual to /v2

--- a/src/v2/layouts/layout.html
+++ b/src/v2/layouts/layout.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism-tomorrow.min.css">
-    <link href="/css/manual.css" rel="stylesheet" />
+    <link href="/v2/css/manual.css" rel="stylesheet" />
 
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -31,69 +31,69 @@
             <li>
               <span>Introduction</span>
               <ul>
-                <li><a href="/">About</a></li>
-                <li><a href="/community">Community</a></li>
-                <li><a href="/installation">Installation</a></li>
-                <li><a href="/faq">FAQ</a></li>
+                <li><a href="/v2/">About</a></li>
+                <li><a href="/v2/community">Community</a></li>
+                <li><a href="/v2/installation">Installation</a></li>
+                <li><a href="/v2/faq">FAQ</a></li>
               </ul>
             </li>
 
             <li>
               <span>Development</span>
               <ul>
-                <li><a href="/development/#environment">Environment</a></li>
-                <li><a href="/development/#contributing">Contributing</a></li>
-                <li><a href="/development/#style-guide">Style guide</a></li>
+                <li><a href="/v2/development/#environment">Environment</a></li>
+                <li><a href="/v2/development/#contributing">Contributing</a></li>
+                <li><a href="/v2/development/#style-guide">Style guide</a></li>
               </ul>
             </li>
 
             <li>
               <span>Concepts</span>
               <ul>
-                <li><a href="/concepts/#build-system">Build system</a></li>
-                <li><a href="/concepts/#configuration-system">Configuration system</a></li>
-                <li><a href="/concepts/#client">Client</a></li>
-                <li><a href="/concepts/#server">Server</a></li>
-                <li><a href="/concepts/#modules">Modules</a></li>
-                <li><a href="/concepts/#packages">Packages</a></li>
-                <li><a href="/concepts/#overlays">Overlays</a></li>
+                <li><a href="/v2/concepts/#build-system">Build system</a></li>
+                <li><a href="/v2/concepts/#configuration-system">Configuration system</a></li>
+                <li><a href="/v2/concepts/#client">Client</a></li>
+                <li><a href="/v2/concepts/#server">Server</a></li>
+                <li><a href="/v2/concepts/#modules">Modules</a></li>
+                <li><a href="/v2/concepts/#packages">Packages</a></li>
+                <li><a href="/v2/concepts/#overlays">Overlays</a></li>
               </ul>
             </li>
 
             <li>
               <span>Configuration</span>
               <ul>
-                <li><a href="/configuration/">General</a></li>
-                <li><a href="/configuration/#webpack">Webpack</a></li>
-                <li><a href="/configuration/connection">Connection</a></li>
-                <li><a href="/configuration/authenticator">Authenticator</a></li>
-                <li><a href="/configuration/storage">Storage</a></li>
-                <li><a href="/configuration/vfs">VFS</a></li>
+                <li><a href="/v2/configuration/">General</a></li>
+                <li><a href="/v2/configuration/#webpack">Webpack</a></li>
+                <li><a href="/v2/configuration/connection">Connection</a></li>
+                <li><a href="/v2/configuration/authenticator">Authenticator</a></li>
+                <li><a href="/v2/configuration/storage">Storage</a></li>
+                <li><a href="/v2/configuration/vfs">VFS</a></li>
               </ul>
             </li>
 
             <li>
               <span>Packages</span>
               <ul>
-                <li><a href="/packages">Introduction</a></li>
-                <li><a href="/packages/scheme">Using Scheme</a></li>
-                <li><a href="/packages/vue">Using Vue</a></li>
-                <li><a href="/packages/react">Using React</a></li>
-                <li><a href="/packages/iframe">Using IFrame</a></li>
+                <li><a href="/v2/packages">Introduction</a></li>
+                <li><a href="/v2/packages/scheme">Using Scheme</a></li>
+                <li><a href="/v2/packages/vue">Using Vue</a></li>
+                <li><a href="/v2/packages/react">Using React</a></li>
+                <li><a href="/v2/packages/iframe">Using IFrame</a></li>
               </ul>
             </li>
 
             <li>
               <span>Guides</span>
               <ul>
-                <li><a href="/guides/authenticator">Authenticator</a></li>
-                <li><a href="/guides/storage">Storage</a></li>
-                <li><a href="/guides/transport">VFS Transport</a></li>
-                <li><a href="/guides/middleware">Middleware</a></li>
-                <li><a href="/guides/service">Service</a></li>
-                <li><a href="/guides/themes">Themes</a></li>
-                <li><a href="/guides/responsive">Responsiveness</a></li>
-                <li><a href="/guides/misc">Misc</a></li>
+                <li><a href="/v2/guides/authenticator">Authenticator</a></li>
+                <li><a href="/v2/guides/storage">Storage</a></li>
+                <li><a href="/v2/guides/transport">VFS Transport</a></li>
+                <li><a href="/v2/guides/middleware">Middleware</a></li>
+                <li><a href="/v2/guides/service">Service</a></li>
+                <li><a href="/v2/guides/themes">Themes</a></li>
+                <li><a href="/v2/guides/responsive">Responsiveness</a></li>
+                <li><a href="/v2/guides/misc">Misc</a></li>
               </ul>
             </li>
 
