Added a v3 link in v2 manual

--- a/src/v2/layouts/layout.html
+++ b/src/v2/layouts/layout.html
@@ -20,8 +20,11 @@
     <link rel="canonical" href="https://manual.os-js.org/{{ this.path }}" />
   </head>
   <body class="{{pathClass this.path}}">
-    <header>
-      OS.js Manual
+    <header style="display:flex;align-items:center;">
+      <div style="flex:1 1">OS.js Manual</div>
+      <div style="float: right;">
+        <a style="color:#fff;font-size: 14px" href="/v3/">Go here for the v3 Manual</a>
+      </div>
     </header>
 
     <main>
