Updated some layout stuff

--- a/src/v3/_layouts/website/page.html
+++ b/src/v3/_layouts/website/page.html
@@ -3,11 +3,8 @@
 {% block head %}
   {{ super() }}
 
-  <style type="text/css">
-.page-wrapper {
-  padding-bottom: 200px;
-}
-  </style>
+  <link rel="publisher" href="https://plus.google.com/101576798387217383063" />
+
 {% endblock %}
 
 {% block book_body %}
