Updated page titles

--- a/src/v2/layouts/layout.html
+++ b/src/v2/layouts/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>{{ title }} - OS.js Manual</title>
+    <title>{{ title }} - OS.js v2 Manual</title>
     <meta name="description" content="OS.js Manual - {{ description }}" />
     <meta name="keywords" content="OS.js,Documentation,Client,Server,API,Tutorial,Tutorials,Manual,Manuals" />
 
