--- a/src/v3/_layouts/website/page.html
+++ b/src/v3/_layouts/website/page.html
@@ -4,6 +4,7 @@
   {{ super() }}
 
   <link rel="publisher" href="https://plus.google.com/101576798387217383063" />
+  <link rel="icon" type="image/x-icon" href="gitbook/images/favicon.ico" />
 
 {% endblock %}
 
