--- a/src/v3/_layouts/website/page.html
+++ b/src/v3/_layouts/website/page.html
@@ -1,6 +1,6 @@
 {% extends template.self %}
 
-{% block title %}{% if page.full_title %}{{ page.full_title }} · {{ super() }}{% else %}{{ page.title }} · {{ super() }}{% endif %}{% endblock %}
+{% block title %}{% if page.full_title %}{{ page.full_title }}{% else %}{{ page.title }}{% endif %} - OS.js v3 Manual{% endblock %}
 
 {% block head %}
   {{ super() }}
