Updated deprecation notice for v2

--- a/src/v2/layouts/layout.html
+++ b/src/v2/layouts/layout.html
@@ -104,7 +104,7 @@
 
       <content>
         <div style="padding:1em;margin-bottom:2em;background-color:#e6e6e6;font-size:1.5em;font-weight:bold">
-          OS.js v2 will soon be deprecated.
+          OS.js v2 has been deprecated.
           Head over to <a href="https://manual.os-js.org/v3">https://manual.os-js.org/v3</a> for the latest v3 manual.
         </div>
         {{{ contents }}}
