--- a/api/osjs-gui/file/src/components/ListView.js.html
+++ b/api/osjs-gui/file/src/components/ListView.js.html
@@ -107,9 +107,11 @@ const createView = props =&gt; {
 
   const cols = (paneIndex) =&gt; (row, rowIndex) =&gt; {
     const col = row.columns[paneIndex] || {};
-    const selected = props.selectedIndex === rowIndex;
     const colIcon = col.icon ? h(Icon, col.icon) : null;
     const children = [h(&apos;span&apos;, {}, [typeof col === &apos;object&apos; ? col.label : col])];
+    const selected = props.multiselect
+      ? props.selectedIndex.indexOf(rowIndex) !== -1
+      : props.selectedIndex === rowIndex;
 
     if (colIcon) {
       children.unshift(colIcon);
@@ -119,11 +121,11 @@ const createView = props =&gt; {
       key: row.key,
       &apos;data-has-icon&apos;: col.icon ? true : undefined,
       class: &apos;osjs-gui-list-view-cell&apos; + (selected ? &apos; osjs__active&apos; : &apos;&apos;),
-      ontouchstart: (ev) =&gt; tapper(ev, () =&gt; props.onactivate({data: row.data, index: rowIndex, ev})),
-      ondblclick: (ev) =&gt; props.onactivate({data: row.data, index: rowIndex, ev}),
-      onclick: (ev) =&gt; props.onselect({data: row.data, index: rowIndex, ev}),
-      oncontextmenu: (ev) =&gt; props.oncontextmenu({data: row.data, index: rowIndex, ev}),
-      oncreate: (el) =&gt; props.oncreate({data: row.data, index: rowIndex, el})
+      ontouchstart: (ev) =&gt; tapper(ev, () =&gt; props.onactivate({index: rowIndex, ev})),
+      ondblclick: (ev) =&gt; props.onactivate({index: rowIndex, ev}),
+      onclick: (ev) =&gt; props.onselect({index: rowIndex, ev}),
+      oncontextmenu: (ev) =&gt; props.oncontextmenu({index: rowIndex, ev}),
+      oncreate: (el) =&gt; props.oncreate({index: rowIndex, el})
     }, children);
   };
 
@@ -153,7 +155,11 @@ const createView = props =&gt; {
     },
     oncreate: el =&gt; (el.scrollTop = props.scrollTop),
     onupdate: el =&gt; {
-      if (props.selectedIndex &lt; 0) {
+      const notSelected = props.multiselect
+        ? props.selectedIndex.length === 0
+        : props.selectedIndex &lt; 0;
+
+      if (notSelected) {
         el.scrollTop = props.scrollTop;
       }
     }
@@ -166,25 +172,101 @@ export const ListView = props =&gt; h(Element, Object.assign({
 
 export const listView = ({
   component: (state, actions) =&gt; {
+    const createSelection = index =&gt; {
+      if (state.multiselect) {
+        const foundIndex = state.selectedIndex.indexOf(index);
+        const newSelection = [...state.selectedIndex];
+        if (foundIndex === -1) {
+          newSelection.push(index);
+        } else {
+          newSelection.splice(foundIndex, 1);
+        }
+
+        return newSelection;
+      }
+
+      return state.selectedIndex;
+    };
+
+    /**
+     * Creates a range of indexes from start to end
+     * @param {Number} start
+     * @param {Number} end
+     * @return {Array}
+     */
+    const createSelectionRange = (start, end) =&gt; {
+      // Swaps start and end if start is greater than end
+      if (start &gt; end) {
+        [start, end] = [end, start];
+      }
+
+      const indices = [
+        ...state.selectedIndex,
+        // Generates a range of indexes from start to end
+        ...Array.from({length: end - start + 1}, (_, i) =&gt; i + start)
+      ];
+
+      // Remove duplicates from the array
+      return [...new Set(indices)];
+    };
+
+    const getSelection = (index, ev) =&gt; {
+      const selected = state.multiselect
+        ? (ev.shiftKey
+          ? createSelectionRange(state.previousSelectedIndex, index)
+          : ev.ctrlKey
+            ? createSelection(index)
+            : [index])
+        : index;
+
+      const data = state.multiselect
+        ? selected.map((item) =&gt; state.rows[item].data)
+        : state.rows[selected].data;
+
+      // Store the previous index in the state to use for calculating the
+      // range if the shift key is pressed
+      if (state.multiselect) {
+        actions.setPreviousSelectedIndex(index);
+      }
+
+      return {selected, data};
+    };
+
+    const clearCurrentSelection = (index) =&gt; {
+      const selected = state.multiselect ? [] : -1;
+
+      const data = state.multiselect
+        ? state.selectedIndex.map((item) =&gt; state.rows[item].data)
+        : state.rows[index].data;
+
+      return {selected, data};
+    };
+
     const newProps = Object.assign({
+      multiselect: false,
       zebra: true,
       columns: [],
       rows: [],
-      onselect: ({data, index, ev}) =&gt; {
+      onselect: ({index, ev}) =&gt; {
+        const {selected, data} = getSelection(index, ev);
+        actions.select({data, index, ev, selected});
+        actions.setSelectedIndex(selected);
+      },
+      onactivate: ({index, ev}) =&gt; {
+        const {selected, data} = clearCurrentSelection(index);
+        actions.activate({data, index, ev, selected});
+        actions.setSelectedIndex(selected);
+      },
+      oncontextmenu: ({index, ev}) =&gt; {
+        const {selected, data} = getSelection(index, ev);
+
         actions.select({data, index, ev});
-        actions.setSelectedIndex(index);
+        actions.contextmenu({data, index, ev, selected});
+        actions.setSelectedIndex(selected);
       },
-      onactivate: ({data, index, ev}) =&gt; {
-        actions.activate({data, index, ev});
-        actions.setSelectedIndex(-1);
-      },
-      oncontextmenu: ({data, index, ev}) =&gt; {
-        actions.select({data, index, ev});
-        actions.contextmenu({data, index, ev});
-        actions.setSelectedIndex(index);
-      },
-      oncreate: (args) =&gt; {
-        actions.created(args);
+      oncreate: ({index, el}) =&gt; {
+        const data = state.rows[index].data;
+        actions.created({index, el, data});
       },
       onscroll: (ev) =&gt; {
         actions.scroll(ev);
@@ -195,7 +277,7 @@ export const listView = ({
   },
 
   state: state =&gt; Object.assign({
-    selectedIndex: -1,
+    selectedIndex: state.multiselect ? [] : -1,
     scrollTop: 0
   }, state),
 
@@ -208,7 +290,8 @@ export const listView = ({
     setRows: rows =&gt; ({rows}),
     setColumns: columns =&gt; ({columns}),
     setScrollTop: scrollTop =&gt; state =&gt; ({scrollTop}),
-    setSelectedIndex: selectedIndex =&gt; state =&gt; ({selectedIndex})
+    setSelectedIndex: selectedIndex =&gt; ({selectedIndex}),
+    setPreviousSelectedIndex: previousSelectedIndex =&gt; ({previousSelectedIndex}),
   }, actions || {})
 });
 </code></pre>
